Mon Oct 27 12:32:17 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-common.h:
        * ace/os_include/sys/os_types.h:
          Introduce new ACE_LACKS_PID_T which is set on Windows, but
          not with MinGW

Mon Oct 27 07:57:57 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_sys_socket.inl:
          Removed the ignore of SO_REUSEADDR on windows, this is needed
          for ACE_SOCK_Dgram_Bcast to work, see bugzilla 4189. Also removed
          the Windows specific change of SO_REUSEPORT to SO_REUSEADDR, this
          are different flags that we should not merge at this level.

Fri Oct 24 18:41:42 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_4189_Regression_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          New test for bugzilla 4189, on Windows it is not possible
          at this moment to open a ACE_SOCK_Dgram_Bcast multiple times
          on the same port, even when reuse_addr has been set to 1

Thu Oct 23 19:41:00 UTC 2014  Steve Huston  <shuston@riverace.com>

        * tests/Naming_Test.cpp: Fixed data type warning for conversion on
          %d formatting for Mingw.

Tue Oct 21 15:45:59 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/ETCL/ETCL_l.cpp:
          Scoreboard cleanup.

Mon Oct 20 15:37:35 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * ACEXML/common/XMLFilterImpl.h:
        * ACEXML/common/XMLFilterImpl.cpp:
        * ACEXML/parser/parser/Entity_Manager.h:
        * ace/ETCL/ETCL_l.cpp:
        * protocols/ace/RMCast/Flow.h:
        * protocols/ace/RMCast/Flow.cpp:
        * protocols/ace/RMCast/Reassemble.h:
        * protocols/ace/RMCast/Reassemble.cpp:
        * protocols/ace/TMCast/TransactionController.hpp:
          Clean up unused member warnings identified by clang 6.0.

        * bin/PerlACE/Process_Unix.pm:
          increase the valgrind wait factor to accommodate slower machines.
